--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -37,13 +37,13 @@
 # directory in the root of your repository.
 #/docs/ @doctocat
 /accounts/      @KimKyungup @aidan-kwon @yoomee1313
-/api/           @KimKyungup @aidan-kwon @yoomee1313
+/api/           @KimKyungup @aidan-kwon @yoomee1313 @hyochan-brown
 /blockchain/    @KimKyungup @aidan-kwon @ehnuje @winnie-byun
 /build/         @KimKyungup @jeongkyun-oh
 /client/
 /cmd/           @KimKyungup @jeongkyun-oh @yoomee1313
 /common/
-/consensus/     @KimKyungup @aidan-kwon @yoomee1313
+/consensus/     @KimKyungup @aidan-kwon @yoomee1313 @hyochan-brown
 /console/
 /contracts/
 /crypto/        @KimKyungup @aidan-kwon
@@ -53,10 +53,10 @@
 /fork/
 /governance/    @KimKyungup @aidan-kwon @yoomee1313
 /kerrors/
-/log/           @KimKyungup @winnie-byun
+/log/           @KimKyungup @winnie-byun @hyochan-brown
 /metrics/       @KimKyungup @ehnuje
 /networks/      @KimKyungup @jeongkyun-oh @winnie-byun
-/node/          @KimKyungup @ehnuje @jeongkyun-oh
+/node/          @KimKyungup @ehnuje @jeongkyun-oh @hyochan-brown
 /params/        @KimKyungup @winnie-byun @yoomee1313
 /reward/
 /ser/
